# papyrus

./: .gitignore  CITATION.cff  README.md  pyproject.toml  setup.cfg  test.ipynb
.github/workflows/: black.yml  flake8.yml  isort.yml  pytest.yml
CI/unit_tests/: test_dummy_test.py
CI/unit_tests/measurements/: test_base_measurement.py
CI/unit_tests/neural_state/: test_neural_state.py  test_neural_state_creator.py
CI/unit_tests/recorders/: test_base_recorder.py  test_data_storage.py
CI/unit_tests/utils/: test_analysis_utils.py  test_matrix_utils.py
examples/: measurements.ipynb  mnist_flax.ipynb
papyrus/: __init__.py
papyrus/measurements/: __init__.py  base_measurement.py  measurements.py  ntk_cross_entropy.py
papyrus/neural_state/: __init__.py  neural_state.py  neural_state_creator.py
papyrus/recorders/: __init__.py  base_recorder.py  data_storage.py  dataset_recorder.py
papyrus/utils/: __init__.py  analysis_utils.py  matrix_utils.py
