
[options]
packages = find:

install_requires =
    numpy 
    h5py

[options.extras_require]
dev =
    numpy>=1.26.0
    isort>=5.13.2
    black>=24.4.0
    pytest>=8.1.1
    flake8>=7.0.0
    pre_commit>=3.7.0

[flake8]
max-line-length = 88

[black]
line-length = 88

[isort]
profile = black
multi_line_output = 3